--- a/ENOMVG_HFT_2022231.WpfClient/SubWindows/StudentEditorWindow.xaml
+++ b/ENOMVG_HFT_2022231.WpfClient/SubWindows/StudentEditorWindow.xaml
@@ -5,7 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ENOMVG_HFT_2022231.WpfClient.SubWindows"
         mc:Ignorable="d"
-        Title="StudentEditorWindow" Height="450" Width="800">
+        Title="Student Editor" Height="450" Width="800">
+    <Window.DataContext>
+        <local:StudentEditorVM/>
+    </Window.DataContext>
     <Grid>
         
     </Grid>
