--- a/ENOMVG_HFT_2022231.WpfClient/SubWindows/StudentEditorWindow.xaml
+++ b/ENOMVG_HFT_2022231.WpfClient/SubWindows/StudentEditorWindow.xaml
@@ -50,7 +50,7 @@
             <TextBox Text="{Binding SelectedStudent.GradesAVG, UpdateSourceTrigger=PropertyChanged}" Grid.Column="2" Grid.Row="2" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
 
             <Label Content="School: " BorderThickness="0.5" BorderBrush="Black" Grid.Column="0" Grid.Row="3" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
-            <TextBox Text="{Binding SelectedStudent.SchoolId, UpdateSourceTrigger=PropertyChanged}" Grid.Column="1" Grid.Row="3" HorizontalContentAlignment="Center" VerticalContentAlignment="Center"/>
+            <ComboBox ItemsSource="{Binding Schools}" SelectedItem="{Binding helper}" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Grid.Row="3" Grid.Column="1"/>
         </Grid>
 
         <Border BorderThickness="0.5" BorderBrush="Black" Grid.Row="1" Grid.Column="1" VerticalAlignment="Stretch">
