added buttons for parametric statistic

--- a/ENOMVG_HFT_2022231.WpfClient/MainWindow.xaml
+++ b/ENOMVG_HFT_2022231.WpfClient/MainWindow.xaml
@@ -44,11 +44,14 @@
             <Button Content="Student with the best grade" Command="{Binding bestStudentCommand}" Grid.Column="2" Grid.Row="1" Padding="10" Margin="17" Background="AquaMarine"/>
             <Button Content="Avarage age across schools" Command="{Binding avgAgeCommand}" Grid.Column="0" Grid.Row="2" Padding="10" Margin="17" Background="AquaMarine"/>
             <Button Content="Young Students" Command="{Binding youngStudentsCommand}" Grid.Column="2" Grid.Row="2" Padding="10" Margin="17" Background="AquaMarine"/>
+            
             <StackPanel Grid.Row="2" Grid.Column="1" VerticalAlignment="Bottom">
                 <Label Content="Selected School: " HorizontalAlignment="Center" VerticalAlignment="Bottom"/>
                 <ComboBox ItemsSource="{Binding Schools}" SelectedItem="{Binding SelectedSchool}" Grid.Row="2" Grid.Column="1" Margin="17, 0, 17, 17" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" VerticalAlignment="Stretch"/>
             </StackPanel>
-            
+            <Button Content="Avarage salary in selected school" Command="{Binding avgSalaryOfSchCommand}" Grid.Column="0" Grid.Row="3" Padding="10" Margin="17"/>
+            <Button Content="Teachers of selected school" Command="{Binding teachersOfSchCommand}" Grid.Column="1" Grid.Row="3" Padding="10" Margin="17"/>
+            <Button Content="Avarage grades in selected school" Command="{Binding avgGradesOfSchCommand}" Grid.Column="2" Grid.Row="3" Padding="10" Margin="17"/>
         </Grid>
     </Grid>
 </Window>
