school page, list function implemented

--- a/ENOMVG_HFT_2022231.JSClient2/wwwroot/style.css
+++ b/ENOMVG_HFT_2022231.JSClient2/wwwroot/style.css
@@ -1,2 +1,21 @@
-﻿body {
+﻿table{
+    width: 100%;
+    border-collapse: collapse;
+}
+
+th, td{
+    padding: 5px;
+}
+
+table, th, td{
+    border: 1px solid black;
+}
+
+tbody {
+    text-align: left;
+    font-weight:bold;
+}
+
+thead{
+    background-color: lightblue;
 }
