--- a/ENOMVG_HFT_2022231.JSClient2/wwwroot/style.css
+++ b/ENOMVG_HFT_2022231.JSClient2/wwwroot/style.css
@@ -7,15 +7,31 @@ th, td{
     padding: 5px;
 }
 
-table, th, td{
+table, th, td {
     border: 1px solid black;
+    font-weight: normal;
 }
 
 tbody {
-    text-align: left;
-    font-weight:bold;
+    text-align: left;   
 }
 
 thead{
     background-color: lightblue;
+}
+
+#formdiv{
+    display: flex;
+    flex-direction: column;
+    margin-bottom:20px;
+}
+
+
+#formdiv label, button, input{
+    margin: 10px;
+    padding: 7px;
+}
+
+#formdiv label{
+    font-weight:bolder;
 }
