--- a/ENOMVG_HFT_2022231.JSClient2/wwwroot/style.css
+++ b/ENOMVG_HFT_2022231.JSClient2/wwwroot/style.css
@@ -35,6 +35,22 @@ thead{
     font-weight:bolder;
 }
 
+#updateformdiv {
+    display: none;
+    flex-direction: column;
+    margin-bottom: 20px;
+}
+
+    #updateformdiv label, button, input {
+        margin: 10px;
+        padding: 7px;
+    }
+
+    #updateformdiv label {
+        font-weight: bolder;
+    }
+
+
 table button{
     padding: 2px;
 }
